--- a/src/assets/sass/components/personal-area/personal-area.scss
+++ b/src/assets/sass/components/personal-area/personal-area.scss
@@ -227,6 +227,10 @@
         color: #888888;
         cursor: pointer;
 
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            text-transform: uppercase;
+        }
+
         @media (max-width: $maxMobWidth) {
             font-weight: 400;
             font-size: 12px;
