--- a/src/assets/sass/components/category/results.scss
+++ b/src/assets/sass/components/category/results.scss
@@ -35,6 +35,7 @@
         &__btn {
             background-color: transparent;
             border: none;
+            font-family: 'Montserrat', sans-serif;
             font-weight: 300;
             font-size: 14px;
             line-height: 140%;
