--- a/src/assets/sass/components/category/sorting.scss
+++ b/src/assets/sass/components/category/sorting.scss
@@ -4,7 +4,7 @@
         gap: 16px;
         margin-bottom: 24px;
 
-        @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
             padding: 0 24px;
         }
     }
