--- a/src/assets/sass/components/news.scss
+++ b/src/assets/sass/components/news.scss
@@ -49,6 +49,7 @@
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
+            align-items: center;
             gap: 24px;
         }
 
