--- a/src/assets/sass/components/product/product.scss
+++ b/src/assets/sass/components/product/product.scss
@@ -5,7 +5,7 @@
     margin: 0 auto;
     margin-bottom: 40px;
 
-    @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+    @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
         position: relative;
         max-width: 744px;
         padding: 0 24px;
@@ -18,7 +18,7 @@
     &__photos {
         margin-right: 32px;
 
-        @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
             margin-right: 8px;
         }
     }
@@ -30,7 +30,7 @@
         padding-right: 16px;
         border-right: 1px solid #E9E9E9;
 
-        @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
             flex-direction: column;
             border-right: none;
         }
@@ -55,7 +55,7 @@
         border: 1px solid #E9E9E9;
         border-radius: 4px;
 
-        @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
             width: 600px;
             height: 448px;
         }
@@ -95,7 +95,7 @@
         flex-direction: column;
         min-width: 465px;
 
-        @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
             align-items: flex-start;
             min-width: 348px;
             max-width: 348px;
@@ -167,7 +167,7 @@
             gap: 16px;
             margin-bottom: 24px;
 
-            @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+            @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
                 display: grid;
                 grid-template-columns: 80px 240px;
 
@@ -223,7 +223,7 @@
         line-height: 15px;
         color: #888888;
 
-        @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
             margin-right: auto;
         }
 
@@ -277,6 +277,12 @@
         gap: 8px;
 
         &--basket {
+
+            @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+                margin-left: auto;
+            }
+
+
             @media (max-width: $maxMobWidth) {
                 position: relative;
                 align-items: center;
@@ -344,6 +350,7 @@
         padding-left: 24px;
         background: url('../assets/img/product/question.svg') no-repeat top left;
         border: none;
+        font-family: 'Montserrat', sans-serif;
         font-weight: 400;
         font-size: 12px;
         line-height: 15px;
@@ -363,7 +370,7 @@
         margin: 0 auto;
         margin-bottom: 120px;
 
-        @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
             padding: 0 24px;
         }
 
@@ -398,7 +405,7 @@
     }
 
     &__delivery {
-        @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
             position: absolute;
             bottom: 0;
             right: 8px;
@@ -409,7 +416,7 @@
     &__tablet {
         display: none;
 
-        @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
             display: flex;
             align-items: center;
             justify-content: space-between;
